--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -5,8 +5,8 @@
     android:id="@+id/linear_layout_shipping_address_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray"
     android:layout_marginTop="@dimen/dp20"
+    android:background="@color/light_gray"
     android:focusableInTouchMode="true"
     android:orientation="vertical">
 
@@ -16,6 +16,7 @@
         android:background="@color/white">
 
         <LinearLayout
+            android:id="@+id/linear_layout_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -37,7 +38,7 @@
             android:textSize="@dimen/sp18" />
 
         <Button
-            android:id="@+id/button_save_address"
+            android:id="@+id/button_save"
             android:layout_width="@dimen/dp64"
             android:layout_height="@dimen/dp32"
             android:layout_gravity="right|center_vertical"
@@ -158,7 +159,7 @@
                 android:layout_marginTop="@dimen/dp8"
                 android:layout_marginRight="@dimen/dp16"
                 android:layout_marginBottom="@dimen/dp8"
-                android:background="@drawable/background_personal_info"
+                android:background="@drawable/background_personal_info_off"
                 android:orientation="vertical"
                 android:padding="@dimen/dp16">
 
@@ -173,7 +174,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <EditText
+                    <TextView
                         android:id="@+id/edit_text_customer_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -200,7 +201,7 @@
                 android:layout_marginLeft="@dimen/dp16"
                 android:layout_marginTop="@dimen/dp8"
                 android:layout_marginRight="@dimen/dp16"
-                android:background="@drawable/background_personal_info"
+                android:background="@drawable/background_personal_info_off"
                 android:orientation="vertical"
                 android:padding="@dimen/dp16">
 
@@ -215,7 +216,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <EditText
+                    <TextView
                         android:id="@+id/edit_text_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
