--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,7 +25,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/dp110"
+                android:layout_marginTop="@dimen/dp100"
                 android:gravity="bottom">
 
                 <LinearLayout
@@ -64,8 +64,8 @@
                         android:gravity="center">
 
                         <de.hdodenhof.circleimageview.CircleImageView
-                            android:layout_width="@dimen/dp72"
-                            android:layout_height="@dimen/dp72"
+                            android:layout_width="@dimen/dp96"
+                            android:layout_height="@dimen/dp96"
                             android:src="@mipmap/ic_avatar"
                             app:civ_border_color="@color/white"
                             app:civ_border_width="@dimen/dp5" />
@@ -252,6 +252,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/linear_layout_contact"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
@@ -290,7 +291,7 @@
 
 
                 <LinearLayout
-
+                    android:id="@+id/linear_layout_logout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
