--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -55,9 +55,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
+                android:orientation="vertical"
                 android:paddingLeft="@dimen/dp16"
                 android:paddingTop="@dimen/dp5"
                 android:paddingRight="@dimen/dp16">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_logo" />
 
                 <TextView
                     android:layout_width="match_parent"
