--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/dp20"
     tools:context=".activity.HomeActivity">
 
     <android.support.v4.view.ViewPager
@@ -12,12 +13,19 @@
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/dp48"></android.support.v4.view.ViewPager>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp1"
+        android:alpha="0.2"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="@dimen/dp56"
+        android:background="@color/black" />
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp56"
         android:layout_gravity="bottom"
-        android:minHeight="@dimen/dp48"
         app:tabBackground="@color/white"
         app:tabGravity="fill"
         app:tabIndicatorColor="@color/white"
