--- a/app/src/main/res/layout/activity_order_history.xml
+++ b/app/src/main/res/layout/activity_order_history.xml
@@ -15,6 +15,7 @@
         android:gravity="center_vertical">
 
         <LinearLayout
+            android:id="@+id/linear_layout_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/dp10">
