--- a/app/src/main/res/layout/activity_order_success.xml
+++ b/app/src/main/res/layout/activity_order_success.xml
@@ -48,9 +48,9 @@
             android:layout_height="@dimen/dp48"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/dp24"
-            android:background="@drawable/button_add_to_cart"
+            android:background="@drawable/button_login"
             android:text="Đặt hàng thêm"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="@dimen/sp14" />
 
         <Button
