--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -46,12 +46,12 @@
                             app:civ_border_width="@dimen/dp5" />
 
                         <ImageView
-                            android:visibility="gone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="right|bottom"
                             android:layout_marginBottom="@dimen/dp5"
-                            android:src="@mipmap/ic_pencil" />
+                            android:src="@mipmap/ic_pencil"
+                            android:visibility="gone" />
 
                     </FrameLayout>
 
@@ -59,6 +59,7 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/button_done"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
@@ -66,6 +67,16 @@
                 android:layout_marginRight="@dimen/dp10"
                 android:background="@drawable/background_related_product"
                 android:text="Xong" />
+
+
+            <ImageView
+                android:id="@+id/image_view_close"
+                android:layout_width="@dimen/dp40"
+                android:layout_height="@dimen/dp40"
+                android:layout_marginLeft="@dimen/dp16"
+                android:layout_marginTop="@dimen/dp20"
+                android:src="@mipmap/ic_close2" />
+
 
         </FrameLayout>
 
